
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ mail ;
 int num (int) ;
 int sprintf (scalar_t__,char*,int,char*) ;
 scalar_t__ strlen (scalar_t__) ;

void own_easy(int dist, char *s) {


 sprintf(mail+strlen(mail),
  "Content-Type: text/html;\n"
  " charset*%u*=\"%s\";\n"
  "Content-Transfer-Encoding: 8bit\n"
  "--sorbo-rox--\n",
  num(dist), s);

}
