; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_99.c_own_easy.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_99.c_own_easy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mail = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [91 x i8] c"Content-Type: text/html;\0A charset*%u*=\22%s\22;\0AContent-Transfer-Encoding: 8bit\0A--sorbo-rox--\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @own_easy(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %5 = load i64, i64* @mail, align 8
  %6 = load i64, i64* @mail, align 8
  %7 = call i64 @strlen(i64 %6)
  %8 = add nsw i64 %5, %7
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @num(i32 %9)
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @sprintf(i64 %8, i8* getelementptr inbounds ([91 x i8], [91 x i8]* @.str, i64 0, i64 0), i32 %10, i8* %11)
  ret void
}

declare dso_local i32 @sprintf(i64, i8*, i32, i8*) #1

declare dso_local i64 @strlen(i64) #1

declare dso_local i32 @num(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
